    (Caleb Severn via aajisaka)

    HADOOP-12302. Fix native compilation on Windows after HADOOP-7824
    (Vinayakumar B via Colin P. McCabe)

    HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
    FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)

    HADOOP-12322. typos in rpcmetrics.java. (Anu Engineer via
    Arpit Agarwal)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (kanaka kumar avvaru via wheat9)

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-11932. MetricsSinkAdapter may hang  when being stopped.
    (Brahma Reddy Battula via jianhe)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12103. Small refactoring of DelegationTokenAuthenticationFilter to
    allow code sharing. (Yongjun Zhang)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.
    (Masatake Iwasaki via aajisaka)
